# pytorch_kinematics

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  LICENSE.txt  README.md  package.xml  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pytorch_kinematics/: __init__.py  cfg.py  chain.py  fk_autograd.py  frame.py  ik.py  jacobian.py  mjcf.py  pk.cpp  pk_cpp_bindings.py  urdf.py
pytorch_kinematics/mjcf_parser/: attribute.py  base.py  copier.py  debugging.py  element.py  schema.py  util.py
pytorch_kinematics/transforms/: __init__.py  math.py  rotation_conversions.py  transform3d.py
pytorch_kinematics/urdf_parser_py/: sdf.py
pytorch_kinematics/urdf_parser_py/xml_reflection/: core.py
scripts/: plot_robot_description.py  test_jacobian.py  test_kinematics.py  test_transform.py
src/pytorch_kinematics/: __init__.py  cfg.py  chain.py  diffchain.py  frame.py  ik.py  jacobian.py  mjcf.py  sdf.py  urdf.py  visualize.py
src/pytorch_kinematics/transforms/: __init__.py  math.py  parameter_conversions.py  parameterized_transform.py  perturbation.py  rotation_conversions.py  se3.py  so3.py  transform3d.py  uncertainty.py
src/pytorch_kinematics/urdf_parser_py/: __init__.py  sdf.py  urdf.py
src/pytorch_kinematics/urdf_parser_py/xml_reflection/: __init__.py  basics.py  core.py
src/tensorflow_kinematics/: __init__.py  chain.py  frame.py  jacobian.py  mjcf.py  sdf.py  urdf.py
src/tensorflow_kinematics/mjcf_parser/: attribute.py  io.py  namescope.py  parser.py  schema.py
src/tensorflow_kinematics/transforms/: rotation_conversions.py  so3.py  transform3d.py
src/zpk_cpp/: pk.cpp
tests/: ant.xml  benchmark_ik.py  gen_fk_perf.py  gen_jac_perf.py  hopper.xml  humanoid.xml  joint_limit_robot.urdf  joint_no_limit_robot.urdf  kuka_iiwa.urdf  kuka_iiwa.xml  link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl  prismatic_robot.urdf  sequential_planar_arm.urdf  simple_y_arm.urdf  test_attributes.py  test_batch_wrapper.py  test_fk_perf.py  test_ik_joint_limits.py  test_ik_using_gradient_descent.py  test_inverse_kinematics.py  test_jacobian.py  test_kinematics.py  test_menagerie.py  test_rotation_conversions.py  test_serial_chain_creation.py  test_shadow_hand.py  test_transform.py  test_uncertainty.py  ur5.urdf  val.xml  victor_mallet.urdf  viz_fk_perf.ipynb
tests/.ipynb_checkpoints/: viz_fk_perf-checkpoint.ipynb
tests/meshes/: cone.mtl
tests/widowx/: README.md  wx250s.srdf  wx250s.urdf
tests/widowx/meshes_wx250s/: WXSA-250-M-1-Base.mtl  WXSA-250-M-10-Finger.mtl  WXSA-250-M-2-Shoulder.mtl  WXSA-250-M-3-UA.mtl  WXSA-250-M-4-UF.mtl  WXSA-250-M-5-LF.mtl  WXSA-250-M-6-Wrist.mtl  WXSA-250-M-7-Gripper.mtl  WXSA-250-M-8-Gripper-Prop.mtl  WXSA-250-M-9-Gripper-Bar.mtl  WXSA-250-M-9-Gripper-Bar.stl
