<?xml version="1.0"?>
<package format="2">
  <name>tensorflow_kinematics</name>
  <version>0.0.0</version>
  <description>robot kinematics in tensorflow</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
